# discord-local-llm-bot

./: .gitignore  LICENSE  README.md  architecture.planttext.com.txt  bun.lockb  index.ts  mkdocs.yml  package.json  pyproject.toml  requirements.txt  update-on-git-change.sh
.github/workflows/: documentation.yml  pre-commit.yml  test.yml
discordbot/: __init__.py  __main__.py  bot.py  llamacpp_config.py  memory_manager.py  model_manager.py  ollama.py  ollama_config.py  version.py
docs/: api.md  index.md
examples/: main.py
langchain-ollama/: __init__.py
src/: index.ts  langchain-ollama.ts
test/: langchain-ollama.test.ts
tests/: langchain-ollama.test.py  test_langchainOllama.py  test_model_manager.py  test_ollama.py
